--- a/levels/blast-processing.html
+++ b/levels/blast-processing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#14 – Blast Processing – Geometry Dash Main Level List</title>
+    <title>#15 – Blast Processing – Geometry Dash Main Level List</title>
     <link rel="stylesheet" href="../style.css">
     <script src="https://kit.fontawesome.com/529502581a.js" crossorigin="anonymous"></script>
 </head>
@@ -74,7 +74,7 @@
                 <div class="record-info">
                     <h2>Records</h2>
                     <h4>100% required to qualify</h4>
-                    <h6>1 record registered, out of which 1 is 100%</h6>
+                    <h6>5 records registered, out of which 5 are 100%</h6>
                 </div>
                 <div class="record-list">
                     <div class="record-list">
@@ -88,6 +88,26 @@
                                 <td>dankmeme01</td>
                                 <td>100%</td>
                                 <td><a class="record-list-link" href="https://www.youtube.com/watch?v=qSLcLq8HbwU" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>lgq60avi</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/DVJ75w9hqHk?si=607bNvzV8q_zG4Co" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>ModernMush</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/FhvNdxgN2T4" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>SF58</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/ZK9inn5J_9o" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>RedCoats</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=lQSnJVYeqX0" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
                             </tr>
                             <!-- Add more rows here -->
                         </table>
